--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -27,6 +27,9 @@
     --shadow-hover: 0 5px 20px rgba(255, 255, 255, 0.15);
 }
 
+
+.program-img
+
 * {
     margin: 0;
     padding: 0;
@@ -2347,7 +2350,7 @@ img.lazy.loaded {
 
 .instructor-img {
     width: 100%;
-    height: 500px;
+    height: 610px;
     object-fit: cover;
     border-radius: var(--border-radius);
     box-shadow: var(--shadow);
