--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -28,7 +28,7 @@
 }
 
 
-contact-info
+instructor-card-img
 
 * {
     margin: 0;
@@ -2475,7 +2475,7 @@ img.lazy.loaded {
 
 .instructor-card-img {
     width: 100%;
-    height: 300px;
+    height: 500px;
     object-fit: cover;
     transition: var(--transition);
 }
