--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -28,7 +28,7 @@
 }
 
 
-instructor-card-img
+hero-logo-img
 
 * {
     margin: 0;
@@ -229,6 +229,7 @@ body {
     display: flex;
     gap: 1rem;
     flex-wrap: wrap;
+    margin-top: 400px;
 }
 
 .hero-logo-img {
@@ -236,6 +237,7 @@ body {
     max-width: 400px;
     height: auto;
     filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.3));
+    margin-top: 500px;
 }
 
 /* Botões */
