--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,7 +3,7 @@
     --primary-color: #87CEEB; /* Azul claro */
     --secondary-color: #000000; /* Preto */
     --accent-color: #4A90E2; /* Azul mais escuro */
-    --background-color: #FFFFFF; /* Branco */
+    --background-color: #e9e9e9; /* Branco */
     --text-color: #333333;
     --text-light: #666666;
     --border-color: #E0E0E0;
@@ -17,7 +17,7 @@
 /* Tema Escuro */
 [data-theme="dark"] {
     --primary-color: #4A90E2;
-    --secondary-color: #FFFFFF;
+    --secondary-color: #e9e9e9;
     --accent-color: #87CEEB;
     --background-color: #1a1a1a;
     --text-color: #FFFFFF;
@@ -28,7 +28,6 @@
 }
 
 
-hero-logo-img
 
 * {
     margin: 0;
@@ -50,7 +49,7 @@ body {
     padding: 0 20px;
 }
 
-/* Botão de Tema */
+
 .theme-toggle {
     position: fixed;
     top: 20px;
@@ -73,7 +72,7 @@ body {
     box-shadow: var(--shadow-hover);
 }
 
-/* Header */
+
 .header {
     background: var(--background-color);
     padding: 1rem 0;
